# Tender

./: CMakeLists.txt  CMakeLists.txt.user.bc1eb13  README.md  manifest.json.in
app/: AddDialog.qml  BaseList.qml  Bubbles.qml  CMakeLists.txt  Drinks.qml  EquipmentList.qml  InLists.qml  Ingredient.qml  Main.qml  Search.qml  Stock.qml  Tender.desktop.in  main.js  openseed.js
app/tests/autopilot/: run
app/tests/autopilot/Tender/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/Tender/: backend.cpp  backend.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: tender.vagueentertainment.pot
